swim_client/src/configuration/tests/resources/invalid/unexpected-value-nested.recon
@config {
    @downlink_connections {
        2
    }
}